# crafting-interpreters

./: .gitignore  build.gradle  build.gradle.kts  pom.xml  settings.gradle  settings.gradle.kts
java/: .gitignore  pom.xml
java/src/main/java/com/craftinginterpreters/lox/: AstPrinter.java  Expr.java  Lox.java  Parser.java  Scanner.java
java/src/main/java/com/craftinginterpreters/tool/: GenerateAst.java
src/main/java/com/craftinginterpreters/lox/: HelloWorld.java  Scanner.java  TokenType.java
stack-vm/c/: CMakeLists.txt
stack-vm/c/src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
treewalk/java/: .gitignore  challenge.el  challenge.lox  count.lox  jlox
treewalk/java/comparisons/: cake.lox  challenge.c  challenge.jl  challenge.py  challenge.rs  class.lox  closure.js  closure.py  closure.rs  closure2.py  closure_const.js  closure_let.js  hoist.js  method_reassignment.lox  super_semantics.cpp
treewalk/java/src/main/java/com/craftinginterpreters/lox/: Expr.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Scanner.java  Stmt.java
treewalk/java/src/main/java/com/craftinginterpreters/tool/: GenerateAst.java
